--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "ember-cli-deploy-service-worker",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Generate a sw.js file to cache assets at build/deploy time.",
   "keywords": [
     "ember-addon",
     "ember-cli-deploy-plugin"
   ],
-  "repository": "",
+  "repository": "https://github.com/mydea/ember-cli-deploy-service-worker",
   "license": "MIT",
-  "author": "",
+  "author": "Francesco Novy <francesconovy@gmail.com>",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -17,17 +17,18 @@
     "build": "ember build --environment=production",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
-    "lint:hbs": "ember-template-lint .",
-    "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
     "test": "npm-run-all lint test:*",
     "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each"
+    "test:ember-compatibility": "ember try:each",
+    "test:node": "mocha node-tests/index-test.js"
   },
   "dependencies": {
-    "ember-cli-deploy-plugin": "^0.2.9"
+    "ember-cli-babel": "^7.26.6",
+    "ember-cli-deploy-plugin": "^0.2.9",
+    "glob": "^7.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "~7.16.3",
@@ -38,9 +39,12 @@
     "@glimmer/tracking": "~1.0.4",
     "babel-eslint": "~10.1.0",
     "broccoli-asset-rev": "~3.0.0",
+    "chai": "~4.3.4",
+    "chai-as-promised": "~7.1.1",
     "ember-auto-import": "~2.2.4",
     "ember-cli": "~3.28.4",
     "ember-cli-dependency-checker": "~3.2.0",
+    "ember-cli-htmlbars": "~6.0.0",
     "ember-cli-inject-live-reload": "~2.1.0",
     "ember-cli-sri": "~2.1.1",
     "ember-cli-terser": "~4.0.2",
@@ -54,11 +58,16 @@
     "ember-try": "~2.0.0",
     "eslint": "~8.3.0",
     "fabscale-eslint-config": "~1.1.1",
+    "fs-extra": "~10.0.0",
     "loader.js": "~4.7.0",
+    "mocha": "~9.1.3",
     "npm-run-all": "~4.1.5",
     "prettier": "~2.5.0",
     "qunit": "~2.17.2",
-    "qunit-dom": "~2.0.0"
+    "qunit-dom": "~2.0.0",
+    "release-it": "~14.11.5",
+    "release-it-lerna-changelog": "~4.0.1",
+    "webpack": "~5.64.4"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
@@ -68,5 +77,22 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "release-it": {
+    "plugins": {
+      "release-it-lerna-changelog": {
+        "infile": "CHANGELOG.md"
+      }
+    },
+    "git": {
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true
+    }
+  },
+  "volta": {
+    "node": "16.13.0",
+    "yarn": "1.22.17"
   }
 }
